--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,3 +12,12 @@ body {
 a {
     text-decoration: none;
 }
+
+.formLine {
+    margin: 0.5rem;
+}
+
+.formContainer {
+    width: 80%;
+    margin: 0.5rem auto;
+}
