--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -21,3 +21,18 @@ a {
     width: 80%;
     margin: 0.5rem auto;
 }
+
+.alert {
+    background-color: rgba(255, 0, 0, 0.486);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+
+}
+
+.is-invalid {
+    border-color: red;
+}
+
+.invalid-feedback {
+    color: red;
+}
