--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,8 +18,20 @@ a {
 }
 
 .formContainer {
-    width: 80%;
+    width: 90%;
     margin: 0.5rem auto;
+
+}
+
+.formLine {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-control {
+    width: 93%;
+    border: 1px solid;
 }
 
 .alert {
