--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -20,6 +20,7 @@ a {
 .formContainer {
     width: 90%;
     margin: 0.5rem auto;
+    position: relative;
 
 }
 
@@ -27,6 +28,7 @@ a {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .form-control {
@@ -47,4 +49,23 @@ a {
 
 .invalid-feedback {
     color: red;
+    width: 93%;
+    margin-left: 7%;
+}
+
+.btn {
+    background-color: rgb(0, 157, 255);
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.6rem;
+    margin: 0.5rem 0;
+}
+
+.btnDelete {
+    background-color: rgb(255, 0, 0);
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.6rem;
+    margin: 0.5rem 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
