--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -58,12 +58,14 @@ a {
     padding: 0.2rem 0.5rem;
     border-radius: 0.6rem;
     margin: 0.5rem 0;
+    border-style: none;
 }
 
 .btnDelete {
     background-color: rgb(255, 0, 0);
     padding: 0.2rem 0.5rem;
     border-radius: 0.6rem;
+    border-style: none;
     margin: 0.5rem 0;
     position: absolute;
     bottom: 0;
